--- a/src/main/resources/templates/Admin/index.html
+++ b/src/main/resources/templates/Admin/index.html
@@ -16,6 +16,7 @@
 <link rel="icon" href="images/icon.png" />
 <!-- Our Custom CSS -->
 <link rel="stylesheet" href="style4.css">
+<link rel="stylesheet" href="card.css">
 <script type="text/javascript" src="font-awesome/js1/fontawesome.js"></script>
 <script type="text/javascript" src=""></script>
 
@@ -80,10 +81,7 @@
 					</button>
 					<div class="collapse navbar-collapse" id="navbarSupportedContent">
 						<ul class="nav navbar-nav ml-auto">
-							<!-- <li class="nav-item"><a class="nav-link fl mr-4 btn btn-light" href="#">
-									<i class="fa fa-shopping-cart" title="View Cart"
-									style="color: red;"></i><span class="label">10</span>
-							</a></li> -->
+							
 							<li class="nav-item  active"><a class="nav-link btn btn-light mr-2" th:href="@{/Admin/product}"
 								>add Product</a></li>
 							<li class="nav-item"><a onclick=" handleListProduct(event);" class="nav-link btn btn-light mr-2" href="#">Products</a></li>
